- Added an example bot; - Added configurability through JVM properties; - Improved robustness;

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>battleclient</module>
         <module>battleserver</module>
+        <module>botexample</module>
     </modules>
     <properties>
         <jersey.version>1.11</jersey.version>
