--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -6,6 +6,9 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>devnobots (POM)</name>
+    <scm>
+        <connection>scm:svn:https://devnobot.googlecode.com/svn/trunk</connection>
+    </scm>
     <modules>
         <module>battleclient</module>
         <module>battleserver</module>
